<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.QuestionListFragment">

    <ImageView
        android:id="@+id/img_board"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/img_onboard"
        />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img_board"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/score"
        android:textColor="@color/onBoard_text_color"
        android:textSize="46sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="200dp"
        android:layout_marginEnd="100dp"
        />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_score"
        app:layout_constraintStart_toEndOf="@id/tv_score"
        android:layout_marginBottom="200dp"
        android:layout_marginStart="10dp"
        android:text="@string/_4_5"
        android:textColor="@color/onBoard_text_color"
        android:textSize="46sp"
        android:textStyle="bold"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_restart"
        android:layout_width="200dp"
        android:layout_height="60dp"
        app:cornerRadius="60dp"
        app:layout_constraintTop_toBottomOf="@id/tv_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/white"
        android:text="@string/restart"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_menu"
        android:layout_width="200dp"
        android:layout_height="60dp"
        app:cornerRadius="60dp"
        app:layout_constraintTop_toBottomOf="@id/btn_restart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/white"
        android:text="@string/exit"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAllCaps="false"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>