<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.QuestionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/onBoard_text_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Questions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"
            android:layout_marginEnd="50dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10_25"
            app:layout_constraintStart_toEndOf="@id/tv_questions"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:textSize="20sp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/img_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_timer"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintTop_toBottomOf="@id/const_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_secund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/_59s"
        app:layout_constraintTop_toTopOf="@id/img_time"
        app:layout_constraintStart_toEndOf="@id/img_time"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:textColor="@color/onBoard_text_color"/>

    <TextView
        android:id="@+id/tv_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/remaining"
        app:layout_constraintTop_toTopOf="@id/tv_secund"
        app:layout_constraintStart_toEndOf="@id/tv_secund"
        android:layout_marginStart="8dp"
        android:textColor="@color/onBoard_text_color"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_questions"
        android:layout_marginTop="160dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_next"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="60dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/onBoard_text_color"
        android:text="@string/prev"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        android:textAllCaps="false"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_prev"
        android:layout_marginBottom="52dp"
        android:layout_marginStart="60dp"
        android:backgroundTint="@color/onBoard_text_color"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="8dp"

        />


</androidx.constraintlayout.widget.ConstraintLayout>